# codepath_python

./: .gitignore  README.md
books/001_fluent_python/: Makefile  hello.py  pyproject.toml
books/001_fluent_python/01_data_model/: data-model.ipynb  frenchdeck.py  vector2d.py
books/001_fluent_python/02_array_seq/: listcomp_speed.py
